# fastspi-nextjs-ssl-templete

./: .gitignore  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
frontend/: Dockerfile.dev  Dockerfile.prod  next.config.mjs
frontend/src/app/: page.tsx
frontend/src/lib/: actions.ts
nginx-conf/: default.conf.erb  default.ssl.conf.erb
