[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ktr <ktrafsfordev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
poetry-plugin-export = "^1.7.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
